create the structer of counter and a little design

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body class="text-center">
+    <h1 class="text-4xl font-bold mb-10">Welcome to my Awesome count app</h1>
 
-
+    <div class="space-y-5  text-center">
+        <h3 id="counter-value" class="text-4xl font-bold">0</h3>
+        <button id="counter-plus" class="btn btn-info text-white text-3xl">+</button>
+        <button id="counter-minus" class="btn btn-info text-white text-3xl">-</button>
+    </div>
     <script src="js/counter.js"></script>
 </body>
 
