--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="text-center">
+<body class="text-center mt-72">
     <h1 class="text-4xl font-bold mb-10">Welcome to my Awesome count app</h1>
 
     <div class="space-y-5  text-center">
@@ -17,6 +17,9 @@
         <button id="counter-plus" class="btn btn-info text-white text-3xl">+</button>
         <button id="counter-minus" class="btn btn-info text-white text-3xl">-</button>
     </div>
+
+
+
     <script src="js/counter.js"></script>
 </body>
 
